--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   build-apk:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_ROOT: $HOME/android-sdk
-      PATH: $HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/platform-tools:$PATH
 
     steps:
     - name: Checkout code
@@ -23,17 +20,23 @@ jobs:
         java-version: '11'
         cache: gradle
 
+    - name: Install prerequisites
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget unzip tar
+
     - name: Install Android SDK command-line tools
       run: |
-        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        mkdir -p $HOME/android-sdk/cmdline-tools
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools
-        mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
+        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        chmod +x $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager
 
     - name: Accept licenses & install SDK packages
       run: |
-        yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-        sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk --licenses
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk \
           "platform-tools" \
           "build-tools;33.0.0" \
           "platforms;android-33"
@@ -42,7 +45,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build Debug APK
-      run: ./gradlew assembleDebug --no-daemon
+      run: ./gradlew assembleDebug --no-daemon -Pandroid.sdk.path=$HOME/android-sdk
 
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
